# cloudformation

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: image.yml  package.yml  publish.yml  test.yml
duplocloud/cfn/: adhoc.py  cfn.py  handler.py  utils.py
duploctl_cfn/: cfn.py  formatter.py
lambda/: cfn.py  handler.py  pyproject.toml  utils.py
lambda/tests/: conftest.py
tests/: conftest.py  test_adhoc.py  test_handler.py  test_integration.py  test_utils.py
