[project]
name = "duploctl-cfn"
description = "DuploCloud CloudFormation manager plugin for duploctl."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10.0"
keywords = [
  "duplocloud",
  "cloudformation",
  "duploctl",
  "aws",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
authors = [{ name = "DuploCloud", email = "support@duplocloud.net" }]
maintainers = [{ name = "DuploCloud", email = "support@duplocloud.net" }]
dependencies = [
  "duplocloud-client @ git+https://github.com/duplocloud/duploctl.git@feat/infrastructure-update-noop",
  "duploctl-aws @ git+https://github.com/duplocloud/duploctl.git@feat/infrastructure-update-noop#subdirectory=plugins/aws",
  "boto3>=1.34.74",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
build = [
  "setuptools_scm",
  "build",
  "wheel>=0.46.2",
]
test = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "ruff",
  "cfn-lambda @ file:lambda",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/duplocloud/cloudformation"
Issues = "https://github.com/duplocloud/cloudformation/issues"

[project.entry-points."duplocloud.net"]
cfn = "duploctl_cfn.cfn:DuploCfn"

[project.entry-points."formats.duplocloud.net"]
cfn = "duploctl_cfn.formatter:tocfn"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = false
packages = ["duploctl_cfn"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
testpaths = ["tests"]
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
  "aws: marks tests that require AWS credentials",
  "cleanup: marks tests that clean up integration test resources",
]

[tool.ruff]
line-length = 79
